# sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt  sentiment.ipynb  stopwords.txt
